--- a/test/fixtures/requests.yml
+++ b/test/fixtures/requests.yml
@@ -1,13 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  startDate: 2015-04-02
-  endDate: 2015-04-02
-  Employee_id: 
-  RequestType_id: 
+  startDate: 2015-05-11
+  endDate: 2015-05-11
+  approved: MyString
+  employee_id: 
+  requestType_id: 
 
 two:
-  startDate: 2015-04-02
-  endDate: 2015-04-02
-  Employee_id: 
-  RequestType_id: 
+  startDate: 2015-05-11
+  endDate: 2015-05-11
+  approved: MyString
+  employee_id: 
+  requestType_id: 
